@@ -12,11 +12,19 @@ Version 3.0.10 - (in development)
       BEGIN, END = map(Keyword, "BEGIN END".split())
       body_word = Word(alphas)
       expr = BEGIN + Group(body_word[:END]) + END
+      # equivalent to
+      # expr = BEGIN + Group(ZeroOrMore(body_word, stop_on=END)) + END
       print(expr.parse_string(test).as_list())
 
   Prints:
 
       ['BEGIN', ['aaa', 'bbb', 'ccc'], 'END']
+
+- Added bool `embed` argument to `ParserElement.create_diagram()`.
+  When passed as True, the resulting diagram will omit the `<DOCTYPE>`,
+  `<HEAD>`, and `<BODY>` tags so that it can be embedded in other
+  HTML source. (Useful when embedding a call to `create_diagram()` in
+  a PyScript HTML page.)
 
 - Fixed bug in srange, when parsing escaped '/' and '\' inside a
   range set.
